# QEMU_VCS

./: .gitignore  CMakeLists.txt  CoSim_DPU_Migration_Integration.docx  CoSim_Platform_部署测试流程.docx  LICENSE  Makefile  QEMU-VCS-CoSim-Platform-Design.pptx  QEMU_VCS_Cosim_Project_Guide.pptx  README.md  build_initramfs.sh  config.env  cosim.sh  cosim_platform_report.pptx  setup.sh
.github/workflows/: ci.yml
bridge/: CMakeLists.txt
bridge/common/: compat_atomic.h  cosim_topology.h  cosim_transport.h  cosim_types.h  dma_manager.c  dma_manager.h  eth_shm.c  eth_shm.h  eth_types.h  link_model.c  link_model.h  ring_buffer.c  ring_buffer.h  shm_layout.c  shm_layout.h  trace_log.c  trace_log.h  transport_shm.c  transport_tcp.c  transport_tcp.h
bridge/eth/: CMakeLists.txt  eth_mac_dpi.c  eth_mac_dpi.h  eth_port.c  eth_port.h  mac_stub.c  mac_stub.h
bridge/qemu/: bridge_qemu.c  bridge_qemu.h  irq_poller.c  irq_poller.h  sock_sync.c  sock_sync.h
bridge/vcs/: bridge_vcs.c  bridge_vcs.sv  sock_sync_vcs.c  virtqueue_dma.c  virtqueue_dma.h  vq_eth_stub.c
docs/: COSIM-C-BUILD.md  COSIM-CROSS-MACHINE-GUIDE.md  COSIM-ETH-MSIX-DEBUG.md  COSIM-ISOLATED-ENVS.md  COSIM-MINIMAL-INTEGRATION.md  COSIM-SRIOV-PF-VF-BAR.md  COSIM-VCS-INTEGRATION.md  COSIM-VF-DATAPLANE-ISSUES.md  CoSim-Platform-Ubuntu-Usage-Guide.docx  CoSim-Platform-Usage-Guide.docx  GDB-Debugging-Guide.md  PCIe-TLP-Normalization-Design.md  SETUP-GUIDE.md  VCS-INTEGRATION-GUIDE.md  cosim_issue_report.pptx  cosim_project_overview.pptx
docs/specs/: 2026-04-25-guest-system-redesign-plan.md  2026-04-25-guest-system-redesign.md
docs/superpowers/plans/: 2026-04-21-transport-tcp.md  2026-04-21-virtio-e2e.md  2026-04-22-qemu-tcp-startup-flow.md  2026-04-24-directory-unification.md  2026-04-28-multi-function-sriov.md  2026-04-29-bdf-cache-ubuntu-kernel.md  2026-04-30-sriov-vf-lifecycle.md  2026-07-13-cosim-branch-cleanup.md
docs/superpowers/specs/: 2026-04-21-transport-tcp-design.md  2026-04-21-virtio-e2e-design.md  2026-04-24-guest-build-log-testflow-design.md  2026-04-24-pcie-tlp-normalization-design.md  2026-04-28-multi-function-sriov-design.md  2026-04-29-bdf-cache-ubuntu-kernel-design.md  2026-04-30-sriov-vf-lifecycle-design.md  2026-07-13-cosim-branch-cleanup-design.md
guest/: buildroot_defconfig  cosim-init
guest/driver/: Makefile  cosim_nic.c
guest/overlay/etc/: inittab  motd
guest/overlay/etc/init.d/: S99cosim
guest/overlay/etc/local.d/: cosim-driver.start
guest/overlay/etc/profile.d/: cosim.sh
pcie_tl_vip/docs/: PCIe_TL_VIP_Integration_Guide.md  PCIe_TL_VIP_User_Guide.md
pcie_tl_vip/docs/superpowers/plans/: 2026-06-12-unified-memory-sync.md  2026-06-25-multi-root-usp.md  (+1 more)
pcie_tl_vip/sim/: filelist.f  filelist_cosim.f  filelist_local.f  run.sh
pcie_tl_vip/src/: pcie_tl_pkg.sv
pcie_tl_vip/src/adapter/: pcie_tl_if_adapter.sv
pcie_tl_vip/src/agent/: pcie_tl_ep_agent.sv  pcie_tl_ep_driver.sv  pcie_tl_rc_driver.sv
pcie_tl_vip/src/env/: pcie_tl_env.sv  pcie_tl_env_config.sv  pcie_tl_scoreboard.sv  pcie_tl_virtual_sequencer.sv
pcie_tl_vip/src/shared/: pcie_tl_cfg_space_manager.sv  pcie_tl_codec.sv  pcie_tl_config_proxy.sv  pcie_tl_func_manager.sv  pcie_tl_sriov_cap.sv
pcie_tl_vip/src/switch/: pcie_tl_switch.sv  pcie_tl_switch_config.sv  pcie_tl_switch_fabric.sv  pcie_tl_switch_port.sv
pcie_tl_vip/src/types/: pcie_tl_tlp.sv  pcie_tl_types.sv
pcie_tl_vip/tests/: pcie_tl_cosim_test.sv  pcie_tl_cross_root_isolation_test.sv  pcie_tl_multi_root_route_test.sv  pcie_tl_multi_root_stress_test.sv  pcie_tl_multipair_heavy_test.sv  pcie_tl_per_root_tag_test.sv  pcie_tl_switch_unified_mem_test.sv  pcie_tl_tb_top.sv  pcie_tl_uneven_ownership_test.sv  pcie_tl_unified_mem_test.sv
qemu-plugin/: cosim_pcie_pf.c  cosim_pcie_pf.h  cosim_pcie_rc.c  cosim_pcie_rc.h  cosim_pcie_vf.c  cosim_pcie_vf.h
qemu-plugin/patches/: 0001-pcie-sriov-skip-acpi-hotplug-for-vf.patch
scripts/: build_cosim_lib.sh  build_cosim_multirc.sh  build_cosim_nic.sh  build_guest_initramfs.sh  build_guest_tools.sh  build_rootfs_alpine.sh  build_rootfs_debian.sh  cfgspace_test.c  cosim_cli.py  devmem_test.c  dma_test.c  gen_usage_doc.py  guest_init.sh  guest_init_phase4.sh  guest_init_phase5.sh  guest_init_tap.sh  inject-modules.sh  launch_dual.py  nic_tx_test.c  prepare-offline.sh  rebuild_lts_initramfs.sh  rebuild_qemu.sh  rebuild_vcs.sh  remote_vip_regress.sh  remote_xilinx_adapter.sh  run_cosim.sh  run_cosim_vcs.sh  run_dual_vcs.sh  run_e2e_virtio.sh  run_phase5_test.sh  run_tap_test.sh  run_tcp_iperf_test.sh  setup-ubuntu-kernel.sh  setup_cosim_qemu.sh  setup_qemu_env.sh  setup_tap_61.sh  trace_analyzer.py  virtio_reg_test.c
tests/e2e/: test_eth_bidir.c  test_eth_iperf.c  test_tcp_cross_machine.c  test_tcp_eth_flood.c  test_vip_smoke.c
tests/integration/: CMakeLists.txt  eth_receiver.c  test_bridge_loopback.c  test_cli_smoke.sh  test_dma_roundtrip.c  test_eth_loopback.c  test_launch_smoke.sh  test_link_drop.c  test_mac_stub_e2e.c  test_msi_roundtrip.c  test_precise_mode.c  test_qemu_integration.c  test_sock_sync.c  test_tcp_roundtrip.c  test_time_sync_loose.c  test_vcs_e2e.c
tests/unit/: CMakeLists.txt  test_dma_manager.c  test_eth_shm.c  test_link_model.c  test_ring_buffer.c  test_shm_layout.c  test_trace_log.c  test_transport_tcp.c
tools/: Makefile  eth_tap_bridge.c  generate_cosim_migration_word.py  generate_cosim_ppt.py  generate_cosim_word.py  generate_issue_report_ppt.py  generate_ppt.py  generate_project_guide_ppt.py  generate_project_overview_ppt.py  generate_ubuntu_guide.py
uvm-tb/: build_uvm.sh  cosim_agent.sv  cosim_driver.sv  cosim_env.sv  cosim_if.sv  cosim_monitor.sv  cosim_pkg.sv  cosim_scoreboard.sv  cosim_sequences.sv  cosim_test.sv  cosim_tlp_transaction.sv  tb_uvm_top.sv
vcs-tb/: cosim_env_config.sv  cosim_perf_monitor.sv  cosim_pkg.sv  cosim_rc_driver.sv  cosim_stub_cpl_if.sv  cosim_test.sv  cosim_vip_top.sv  cosim_xrc_atomic_check.svh  cosim_xrc_driver.sv  cosim_xrc_pkg.sv  cosim_xrc_test.sv  glue_if_to_stub.sv  pcie_ep_stub.sv  tb_cosim_multirc_top.sv  tb_top.sv
vcs-tb/tests/: guest_pcie_stress.sh
(+4 files in other folders)
