add_executable(test_ring_buffer test_ring_buffer.c)
target_link_libraries(test_ring_buffer cosim_bridge_common)
add_test(NAME test_ring_buffer COMMAND test_ring_buffer)

add_executable(test_shm_layout test_shm_layout.c)
target_link_libraries(test_shm_layout cosim_bridge_common)
add_test(NAME test_shm_layout COMMAND test_shm_layout)

add_executable(test_dma_manager test_dma_manager.c)
target_link_libraries(test_dma_manager cosim_bridge_common)
add_test(NAME test_dma_manager COMMAND test_dma_manager)

add_executable(test_trace_log test_trace_log.c)
target_link_libraries(test_trace_log cosim_bridge_common)
add_test(NAME test_trace_log COMMAND test_trace_log)

add_executable(test_eth_shm test_eth_shm.c)
target_link_libraries(test_eth_shm cosim_bridge_common)
add_test(NAME test_eth_shm COMMAND test_eth_shm)

add_executable(test_link_model test_link_model.c)
target_link_libraries(test_link_model cosim_bridge_common)
add_test(NAME test_link_model COMMAND test_link_model)

add_executable(test_transport_tcp test_transport_tcp.c)
target_link_libraries(test_transport_tcp cosim_bridge_common cosim_bridge pthread)
add_test(NAME test_transport_tcp COMMAND test_transport_tcp)
set_tests_properties(test_transport_tcp PROPERTIES TIMEOUT 30)
